--- a/src/output.css
+++ b/src/output.css
@@ -554,6 +554,870 @@ video {
   display: none;
 }
 
-.underline {
-  text-decoration-line: underline;
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
+}
+
+.top-\[100px\] {
+  top: 100px;
+}
+
+.right-\[\] {
+  right: ;
+}
+
+.right-\[100px\] {
+  right: 100px;
+}
+
+.right-\[300px\] {
+  right: 300px;
+}
+
+.right-\[200px\] {
+  right: 200px;
+}
+
+.top-\[-100px\] {
+  top: -100px;
+}
+
+.right-\[0px\] {
+  right: 0px;
+}
+
+.right-\[-10px\] {
+  right: -10px;
+}
+
+.right-\[-100px\] {
+  right: -100px;
+}
+
+.right-0 {
+  right: 0px;
+}
+
+.left-\[-100px\] {
+  left: -100px;
+}
+
+.left-\[100px\] {
+  left: 100px;
+}
+
+.left-\[500px\] {
+  left: 500px;
+}
+
+.top-\[-400px\] {
+  top: -400px;
+}
+
+.top-\[-300px\] {
+  top: -300px;
+}
+
+.top-\[-350px\] {
+  top: -350px;
+}
+
+.top-\[-370px\] {
+  top: -370px;
+}
+
+.top-\[-380px\] {
+  top: -380px;
+}
+
+.left-\[700px\] {
+  left: 700px;
+}
+
+.left-\[900px\] {
+  left: 900px;
+}
+
+.left-\[820px\] {
+  left: 820px;
+}
+
+.left-\[810px\] {
+  left: 810px;
+}
+
+.left-\[800px\] {
+  left: 800px;
+}
+
+.left-\[750px\] {
+  left: 750px;
+}
+
+.left-\[780px\] {
+  left: 780px;
+}
+
+.left-\[790px\] {
+  left: 790px;
+}
+
+.top-\[-420px\] {
+  top: -420px;
+}
+
+.top-\[\] {
+  top: ;
+}
+
+.top-\[-200px\] {
+  top: -200px;
+}
+
+.top-\[200px\] {
+  top: 200px;
+}
+
+.top-\[900px\] {
+  top: 900px;
+}
+
+.left-\[\] {
+  left: ;
+}
+
+.left-\[400px\] {
+  left: 400px;
+}
+
+.top-\[950px\] {
+  top: 950px;
+}
+
+.top-\[940px\] {
+  top: 940px;
+}
+
+.z-\[-1\] {
+  z-index: -1;
+}
+
+.z-\[0\] {
+  z-index: 0;
+}
+
+.z-10 {
+  z-index: 10;
+}
+
+.m-10 {
+  margin: 2.5rem;
+}
+
+.m-\[150px\] {
+  margin: 150px;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.my-auto {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.my-10 {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+
+.my-7 {
+  margin-top: 1.75rem;
+  margin-bottom: 1.75rem;
+}
+
+.my-9 {
+  margin-top: 2.25rem;
+  margin-bottom: 2.25rem;
+}
+
+.my-\[150px\] {
+  margin-top: 150px;
+  margin-bottom: 150px;
+}
+
+.mt-\[100px\] {
+  margin-top: 100px;
+}
+
+.mt-\[10px\] {
+  margin-top: 10px;
+}
+
+.mt-7 {
+  margin-top: 1.75rem;
+}
+
+.mt-8 {
+  margin-top: 2rem;
+}
+
+.mt-1 {
+  margin-top: 0.25rem;
+}
+
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+
+.mb-12 {
+  margin-bottom: 3rem;
+}
+
+.mb-7 {
+  margin-bottom: 1.75rem;
+}
+
+.mt-\[80px\] {
+  margin-top: 80px;
+}
+
+.mt-\[120px\] {
+  margin-top: 120px;
+}
+
+.mt-\[200px\] {
+  margin-top: 200px;
+}
+
+.mb-8 {
+  margin-bottom: 2rem;
+}
+
+.mb-\[\] {
+  margin-bottom: ;
+}
+
+.mb-\[150px\] {
+  margin-bottom: 150px;
+}
+
+.block {
+  display: block;
+}
+
+.flex {
+  display: flex;
+}
+
+.hidden {
+  display: none;
+}
+
+.h-\[\] {
+  height: ;
+}
+
+.h-\[80vh\] {
+  height: 80vh;
+}
+
+.h-\[50vh\] {
+  height: 50vh;
+}
+
+.h-\[70vh\] {
+  height: 70vh;
+}
+
+.h-\[77vh\] {
+  height: 77vh;
+}
+
+.h-full {
+  height: 100%;
+}
+
+.h-fit {
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+.h-\[30vh\] {
+  height: 30vh;
+}
+
+.w-\[60\%\] {
+  width: 60%;
+}
+
+.w-\[90\] {
+  width: 90;
+}
+
+.w-\[90\%\] {
+  width: 90%;
+}
+
+.w-\[565p\] {
+  width: 565p;
+}
+
+.w-\[565px\] {
+  width: 565px;
+}
+
+.w-\[792px\] {
+  width: 792px;
+}
+
+.w-full {
+  width: 100%;
+}
+
+.w-\[992px\] {
+  width: 992px;
+}
+
+.w-\[\] {
+  width: ;
+}
+
+.w-\[1057\] {
+  width: 1057;
+}
+
+.w-\[1057px\] {
+  width: 1057px;
+}
+
+.w-\[50\%\] {
+  width: 50%;
+}
+
+.w-\[40\%\] {
+  width: 40%;
+}
+
+.w-\[47\%\] {
+  width: 47%;
+}
+
+.w-\[45\%\] {
+  width: 45%;
+}
+
+.w-\[493px\] {
+  width: 493px;
+}
+
+.w-\[508px\] {
+  width: 508px;
+}
+
+.w-\[532px\] {
+  width: 532px;
+}
+
+.w-\[522px\] {
+  width: 522px;
+}
+
+.w-\[444\%\] {
+  width: 444%;
+}
+
+.w-\[44\%\] {
+  width: 44%;
+}
+
+.w-\[50px\] {
+  width: 50px;
+}
+
+.flex-col {
+  flex-direction: column;
+}
+
+.flex-col-reverse {
+  flex-direction: column-reverse;
+}
+
+.justify-end {
+  justify-content: flex-end;
+}
+
+.justify-between {
+  justify-content: space-between;
+}
+
+.gap-\[20px\] {
+  gap: 20px;
+}
+
+.gap-\[\] {
+  gap: ;
+}
+
+.gap-\[2\%\] {
+  gap: 2%;
+}
+
+.gap-\[12\%\] {
+  gap: 12%;
+}
+
+.text-clip {
+  text-overflow: clip;
+}
+
+.border-\[2px\] {
+  border-width: 2px;
+}
+
+.border {
+  border-width: 1px;
+}
+
+.border-\[7px\] {
+  border-width: 7px;
+}
+
+.border-b {
+  border-bottom-width: 1px;
+}
+
+.border-b-8 {
+  border-bottom-width: 8px;
+}
+
+.border-dashed {
+  border-style: dashed;
+}
+
+.border-dotted {
+  border-style: dotted;
+}
+
+.border-double {
+  border-style: double;
+}
+
+.border-\[\] {
+  border-color: ;
+}
+
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity, 1));
+}
+
+.bg-\[\] {
+  background-color: ;
+}
+
+.bg-\[\#233000\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(35 48 0 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\#EBF0E4\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(235 240 228 / var(--tw-bg-opacity, 1));
+}
+
+.p-\[30px\] {
+  padding: 30px;
+}
+
+.p-10 {
+  padding: 2.5rem;
+}
+
+.p-1 {
+  padding: 0.25rem;
+}
+
+.p-14 {
+  padding: 3.5rem;
+}
+
+.p-12 {
+  padding: 3rem;
+}
+
+.px-\[40px\] {
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
+.py-\[10px\] {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.py-\[30px\] {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.py-16 {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+
+.py-\[77px\] {
+  padding-top: 77px;
+  padding-bottom: 77px;
+}
+
+.py-\[px\] {
+  padding-top: px;
+  padding-bottom: px;
+}
+
+.py-\[80px\] {
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+
+.pb-16 {
+  padding-bottom: 4rem;
+}
+
+.pt-16 {
+  padding-top: 4rem;
+}
+
+.pt-1 {
+  padding-top: 0.25rem;
+}
+
+.pt-\[\] {
+  padding-top: ;
+}
+
+.pt-\[77px\] {
+  padding-top: 77px;
+}
+
+.pl-12 {
+  padding-left: 3rem;
+}
+
+.pt-12 {
+  padding-top: 3rem;
+}
+
+.pl-0 {
+  padding-left: 0px;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-end {
+  text-align: end;
+}
+
+.font-serif {
+  font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.text-\[148px\] {
+  font-size: 148px;
+}
+
+.text-\[24px\] {
+  font-size: 24px;
+}
+
+.text-\[48px\] {
+  font-size: 48px;
+}
+
+.text-\[68px\] {
+  font-size: 68px;
+}
+
+.text-\[108px\] {
+  font-size: 108px;
+}
+
+.text-\[40px\] {
+  font-size: 40px;
+}
+
+.text-\[70px\] {
+  font-size: 70px;
+}
+
+.text-\[60px\] {
+  font-size: 60px;
+}
+
+.text-\[55px\] {
+  font-size: 55px;
+}
+
+.text-\[50px\] {
+  font-size: 50px;
+}
+
+.text-\[20px\] {
+  font-size: 20px;
+}
+
+.text-\[18px\] {
+  font-size: 18px;
+}
+
+.text-\[53px\] {
+  font-size: 53px;
+}
+
+.text-\[51px\] {
+  font-size: 51px;
+}
+
+.text-\[47px\] {
+  font-size: 47px;
+}
+
+.text-\[45px\] {
+  font-size: 45px;
+}
+
+.leading-3 {
+  line-height: .75rem;
+}
+
+.leading-\[\] {
+  line-height: ;
+}
+
+.leading-\[5px\] {
+  line-height: 5px;
+}
+
+.leading-10 {
+  line-height: 2.5rem;
+}
+
+.leading-\[50px\] {
+  line-height: 50px;
+}
+
+.leading-\[100px\] {
+  line-height: 100px;
+}
+
+.leading-\[150px\] {
+  line-height: 150px;
+}
+
+.leading-6 {
+  line-height: 1.5rem;
+}
+
+.leading-4 {
+  line-height: 1rem;
+}
+
+.leading-5 {
+  line-height: 1.25rem;
+}
+
+.leading-\[60px\] {
+  line-height: 60px;
+}
+
+.leading-\[80px\] {
+  line-height: 80px;
+}
+
+.leading-8 {
+  line-height: 2rem;
+}
+
+.leading-\[70px\] {
+  line-height: 70px;
+}
+
+.leading-\[90px\] {
+  line-height: 90px;
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity, 1));
+}
+
+.text-\[\] {
+  color: ;
+}
+
+.text-\[wh\] {
+  color: wh;
+}
+
+.text-\[4\] {
+  color: 4;
+}
+
+@media (min-width: 640px) {
+  .md\:absolute {
+    position: absolute;
+  }
+
+  .md\:relative {
+    position: relative;
+  }
+
+  .md\:my-\[5px\] {
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+
+  .md\:my-auto {
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+
+  .md\:my-0 {
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+
+  .md\:mx-0 {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
+  .md\:mt-0 {
+    margin-top: 0px;
+  }
+
+  .md\:mb-0 {
+    margin-bottom: 0px;
+  }
+
+  .md\:block {
+    display: block;
+  }
+
+  .md\:flex {
+    display: flex;
+  }
+
+  .md\:hidden {
+    display: none;
+  }
+
+  .md\:h-\[77vh\] {
+    height: 77vh;
+  }
+
+  .md\:w-\[65\%\] {
+    width: 65%;
+  }
+
+  .md\:w-\[70\%\] {
+    width: 70%;
+  }
+
+  .md\:w-\[1057px\] {
+    width: 1057px;
+  }
+
+  .md\:w-\[565px\] {
+    width: 565px;
+  }
+
+  .md\:w-\[45\%\] {
+    width: 45%;
+  }
+
+  .md\:w-fit {
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+
+  .md\:w-\[493px\] {
+    width: 493px;
+  }
+
+  .md\:w-\[508px\] {
+    width: 508px;
+  }
+
+  .md\:w-\[522px\] {
+    width: 522px;
+  }
+
+  .md\:w-\[44\%\] {
+    width: 44%;
+  }
+
+  .md\:pl-12 {
+    padding-left: 3rem;
+  }
+
+  .md\:text-start {
+    text-align: start;
+  }
+
+  .md\:text-7xl {
+    font-size: 4.5rem;
+    line-height: 1;
+  }
+
+  .md\:text-\[148px\] {
+    font-size: 148px;
+  }
+
+  .md\:text-\[24px\] {
+    font-size: 24px;
+  }
+
+  .md\:text-\[108px\] {
+    font-size: 108px;
+  }
+
+  .md\:text-\[68px\] {
+    font-size: 68px;
+  }
+
+  .md\:leading-\[150px\] {
+    line-height: 150px;
+  }
+
+  .md\:leading-\[80px\] {
+    line-height: 80px;
+  }
 }
