--- a/src/output.css
+++ b/src/output.css
@@ -554,112 +554,12 @@ video {
   display: none;
 }
 
-.absolute {
-  position: absolute;
-}
-
 .relative {
   position: relative;
 }
 
-.top-\[100px\] {
-  top: 100px;
-}
-
-.right-\[\] {
-  right: ;
-}
-
-.right-\[100px\] {
-  right: 100px;
-}
-
-.right-\[300px\] {
-  right: 300px;
-}
-
-.right-\[200px\] {
-  right: 200px;
-}
-
-.top-\[-100px\] {
-  top: -100px;
-}
-
-.right-\[0px\] {
-  right: 0px;
-}
-
-.right-\[-10px\] {
-  right: -10px;
-}
-
-.right-\[-100px\] {
-  right: -100px;
-}
-
-.right-0 {
-  right: 0px;
-}
-
-.left-\[-100px\] {
-  left: -100px;
-}
-
-.left-\[100px\] {
-  left: 100px;
-}
-
 .left-\[500px\] {
   left: 500px;
-}
-
-.top-\[-400px\] {
-  top: -400px;
-}
-
-.top-\[-300px\] {
-  top: -300px;
-}
-
-.top-\[-350px\] {
-  top: -350px;
-}
-
-.top-\[-370px\] {
-  top: -370px;
-}
-
-.top-\[-380px\] {
-  top: -380px;
-}
-
-.left-\[700px\] {
-  left: 700px;
-}
-
-.left-\[900px\] {
-  left: 900px;
-}
-
-.left-\[820px\] {
-  left: 820px;
-}
-
-.left-\[810px\] {
-  left: 810px;
-}
-
-.left-\[800px\] {
-  left: 800px;
-}
-
-.left-\[750px\] {
-  left: 750px;
-}
-
-.left-\[780px\] {
-  left: 780px;
 }
 
 .left-\[790px\] {
@@ -670,56 +570,16 @@ video {
   top: -420px;
 }
 
-.top-\[\] {
-  top: ;
-}
-
-.top-\[-200px\] {
-  top: -200px;
-}
-
-.top-\[200px\] {
-  top: 200px;
-}
-
-.top-\[900px\] {
-  top: 900px;
-}
-
-.left-\[\] {
-  left: ;
-}
-
-.left-\[400px\] {
-  left: 400px;
-}
-
-.top-\[950px\] {
-  top: 950px;
-}
-
 .top-\[940px\] {
   top: 940px;
-}
-
-.z-\[-1\] {
-  z-index: -1;
-}
-
-.z-\[0\] {
-  z-index: 0;
 }
 
 .z-10 {
   z-index: 10;
 }
 
-.m-10 {
-  margin: 2.5rem;
-}
-
-.m-\[150px\] {
-  margin: 150px;
+.z-\[0\] {
+  z-index: 0;
 }
 
 .mx-auto {
@@ -727,24 +587,9 @@ video {
   margin-right: auto;
 }
 
-.my-auto {
-  margin-top: auto;
-  margin-bottom: auto;
-}
-
-.my-10 {
-  margin-top: 2.5rem;
-  margin-bottom: 2.5rem;
-}
-
 .my-7 {
   margin-top: 1.75rem;
   margin-bottom: 1.75rem;
-}
-
-.my-9 {
-  margin-top: 2.25rem;
-  margin-bottom: 2.25rem;
 }
 
 .my-\[150px\] {
@@ -752,36 +597,69 @@ video {
   margin-bottom: 150px;
 }
 
-.mt-\[100px\] {
-  margin-top: 100px;
+.my-auto {
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
-.mt-\[10px\] {
-  margin-top: 10px;
+.my-6 {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 
-.mt-7 {
-  margin-top: 1.75rem;
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
-.mt-8 {
-  margin-top: 2rem;
-}
-
-.mt-1 {
-  margin-top: 0.25rem;
-}
-
-.mt-10 {
+.my-10 {
   margin-top: 2.5rem;
-}
-
-.mb-10 {
   margin-bottom: 2.5rem;
 }
 
-.mb-1 {
+.my-12 {
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
+
+.my-1 {
+  margin-top: 0.25rem;
   margin-bottom: 0.25rem;
+}
+
+.my-14 {
+  margin-top: 3.5rem;
+  margin-bottom: 3.5rem;
+}
+
+.my-16 {
+  margin-top: 4rem;
+  margin-bottom: 4rem;
+}
+
+.my-\[20px\] {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.my-\[\] {
+  margin-top: ;
+  margin-bottom: ;
+}
+
+.my-\[100px\] {
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+
+.my-5 {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
+}
+
+.my-\[10px\] {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .mb-12 {
@@ -792,28 +670,40 @@ video {
   margin-bottom: 1.75rem;
 }
 
-.mt-\[80px\] {
-  margin-top: 80px;
+.mt-7 {
+  margin-top: 1.75rem;
 }
 
-.mt-\[120px\] {
-  margin-top: 120px;
+.mt-\[10px\] {
+  margin-top: 10px;
 }
 
 .mt-\[200px\] {
   margin-top: 200px;
 }
 
-.mb-8 {
-  margin-bottom: 2rem;
+.mt-16 {
+  margin-top: 4rem;
 }
 
-.mb-\[\] {
-  margin-bottom: ;
+.mt-\[\] {
+  margin-top: ;
 }
 
-.mb-\[150px\] {
-  margin-bottom: 150px;
+.mt-\[100px\] {
+  margin-top: 100px;
+}
+
+.mt-\[150px\] {
+  margin-top: 150px;
+}
+
+.mt-\[80px\] {
+  margin-top: 80px;
+}
+
+.mt-5 {
+  margin-top: 1.25rem;
 }
 
 .block {
@@ -828,6 +718,30 @@ video {
   display: none;
 }
 
+.h-\[50vh\] {
+  height: 50vh;
+}
+
+.h-full {
+  height: 100%;
+}
+
+.h-\[100vh\] {
+  height: 100vh;
+}
+
+.h-\[10vh\] {
+  height: 10vh;
+}
+
+.h-\[0vh\] {
+  height: 0vh;
+}
+
+.h-\[40vh\] {
+  height: 40vh;
+}
+
 .h-\[\] {
   height: ;
 }
@@ -836,117 +750,156 @@ video {
   height: 80vh;
 }
 
-.h-\[50vh\] {
-  height: 50vh;
+.h-\[150vh\] {
+  height: 150vh;
 }
 
-.h-\[70vh\] {
-  height: 70vh;
+.h-\[120vh\] {
+  height: 120vh;
 }
 
-.h-\[77vh\] {
-  height: 77vh;
+.h-\[115vh\] {
+  height: 115vh;
 }
 
-.h-full {
-  height: 100%;
-}
-
-.h-fit {
-  height: -moz-fit-content;
-  height: fit-content;
-}
-
-.h-\[30vh\] {
-  height: 30vh;
+.h-\[110vh\] {
+  height: 110vh;
 }
 
 .w-\[60\%\] {
   width: 60%;
 }
 
-.w-\[90\] {
-  width: 90;
-}
-
 .w-\[90\%\] {
   width: 90%;
-}
-
-.w-\[565p\] {
-  width: 565p;
-}
-
-.w-\[565px\] {
-  width: 565px;
-}
-
-.w-\[792px\] {
-  width: 792px;
 }
 
 .w-full {
   width: 100%;
 }
 
-.w-\[992px\] {
-  width: 992px;
-}
-
 .w-\[\] {
   width: ;
 }
 
-.w-\[1057\] {
-  width: 1057;
+.w-\[20\] {
+  width: 20;
 }
 
-.w-\[1057px\] {
-  width: 1057px;
-}
-
-.w-\[50\%\] {
-  width: 50%;
+.w-\[20\%\] {
+  width: 20%;
 }
 
 .w-\[40\%\] {
   width: 40%;
 }
 
-.w-\[47\%\] {
-  width: 47%;
+.w-\[50\%\] {
+  width: 50%;
 }
 
-.w-\[45\%\] {
-  width: 45%;
+.w-\[300px\] {
+  width: 300px;
 }
 
-.w-\[493px\] {
-  width: 493px;
+.w-\[400px\] {
+  width: 400px;
 }
 
-.w-\[508px\] {
-  width: 508px;
+.w-\[350px\] {
+  width: 350px;
 }
 
-.w-\[532px\] {
-  width: 532px;
+.w-\[340px\] {
+  width: 340px;
 }
 
-.w-\[522px\] {
-  width: 522px;
+.w-\[0px\] {
+  width: 0px;
 }
 
-.w-\[444\%\] {
-  width: 444%;
+.w-\[649px\] {
+  width: 649px;
 }
 
-.w-\[44\%\] {
-  width: 44%;
+.w-\[508\] {
+  width: 508;
 }
 
-.w-\[50px\] {
-  width: 50px;
+.w-\[206px\] {
+  width: 206px;
+}
+
+.w-\[110px\] {
+  width: 110px;
+}
+
+.w-\[1110px\] {
+  width: 1110px;
+}
+
+.w-\[900px\] {
+  width: 900px;
+}
+
+.w-\[700px\] {
+  width: 700px;
+}
+
+.w-\[750px\] {
+  width: 750px;
+}
+
+.w-\[200px\] {
+  width: 200px;
+}
+
+.w-\[360px\] {
+  width: 360px;
+}
+
+.w-\[90\] {
+  width: 90;
+}
+
+.w-\[500px\] {
+  width: 500px;
+}
+
+.w-\[800px\] {
+  width: 800px;
+}
+
+.w-\[820px\] {
+  width: 820px;
+}
+
+.w-\[8\] {
+  width: 8;
+}
+
+.w-\[870px\] {
+  width: 870px;
+}
+
+.w-\[90px\] {
+  width: 90px;
+}
+
+.w-\[25\%\] {
+  width: 25%;
+}
+
+.w-\[30\%\] {
+  width: 30%;
+}
+
+.w-\[70\%\] {
+  width: 70%;
+}
+
+.flex-row {
+  flex-direction: row;
 }
 
 .flex-col {
@@ -961,28 +914,108 @@ video {
   justify-content: flex-end;
 }
 
+.justify-center {
+  justify-content: center;
+}
+
 .justify-between {
   justify-content: space-between;
 }
 
-.gap-\[20px\] {
-  gap: 20px;
+.justify-around {
+  justify-content: space-around;
 }
 
-.gap-\[\] {
-  gap: ;
-}
-
-.gap-\[2\%\] {
-  gap: 2%;
+.justify-evenly {
+  justify-content: space-evenly;
 }
 
 .gap-\[12\%\] {
   gap: 12%;
 }
 
-.text-clip {
-  text-overflow: clip;
+.gap-\[20px\] {
+  gap: 20px;
+}
+
+.gap-\[100px\] {
+  gap: 100px;
+}
+
+.gap-\[30px\] {
+  gap: 30px;
+}
+
+.gap-\[50px\] {
+  gap: 50px;
+}
+
+.gap-\[60px\] {
+  gap: 60px;
+}
+
+.gap-\[80px\] {
+  gap: 80px;
+}
+
+.gap-\[\] {
+  gap: ;
+}
+
+.gap-\[10px\] {
+  gap: 10px;
+}
+
+.gap-\[40px\] {
+  gap: 40px;
+}
+
+.gap-\[45px\] {
+  gap: 45px;
+}
+
+.gap-\[43px\] {
+  gap: 43px;
+}
+
+.gap-5 {
+  gap: 1.25rem;
+}
+
+.gap-7 {
+  gap: 1.75rem;
+}
+
+.gap-\[3\%\] {
+  gap: 3%;
+}
+
+.gap-10 {
+  gap: 2.5rem;
+}
+
+.gap-1 {
+  gap: 0.25rem;
+}
+
+.gap-14 {
+  gap: 3.5rem;
+}
+
+.gap-16 {
+  gap: 4rem;
+}
+
+.gap-3 {
+  gap: 0.75rem;
+}
+
+.text-ellipsis {
+  text-overflow: ellipsis;
+}
+
+.text-wrap {
+  text-wrap: wrap;
 }
 
 .border-\[2px\] {
@@ -993,32 +1026,40 @@ video {
   border-width: 1px;
 }
 
-.border-\[7px\] {
-  border-width: 7px;
+.border-\[1px\] {
+  border-width: 1px;
 }
 
-.border-b {
-  border-bottom-width: 1px;
+.border-\[3px\] {
+  border-width: 3px;
 }
 
 .border-b-8 {
   border-bottom-width: 8px;
 }
 
-.border-dashed {
-  border-style: dashed;
+.border-b-\[2px\] {
+  border-bottom-width: 2px;
+}
+
+.border-t {
+  border-top-width: 1px;
+}
+
+.border-b {
+  border-bottom-width: 1px;
+}
+
+.border-b-\[3px\] {
+  border-bottom-width: 3px;
+}
+
+.border-solid {
+  border-style: solid;
 }
 
 .border-dotted {
   border-style: dotted;
-}
-
-.border-double {
-  border-style: double;
-}
-
-.border-\[\] {
-  border-color: ;
 }
 
 .border-black {
@@ -1026,8 +1067,37 @@ video {
   border-color: rgb(0 0 0 / var(--tw-border-opacity, 1));
 }
 
-.bg-\[\] {
-  background-color: ;
+.border-\[\] {
+  border-color: ;
+}
+
+.border-\[\#233000\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(35 48 0 / var(--tw-border-opacity, 1));
+}
+
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
+}
+
+.border-\[\#5E6600\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(94 102 0 / var(--tw-border-opacity, 1));
+}
+
+.border-\[px\] {
+  border-color: px;
+}
+
+.border-b-rose-600 {
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(225 29 72 / var(--tw-border-opacity, 1));
+}
+
+.border-b-rose-700 {
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(190 18 60 / var(--tw-border-opacity, 1));
 }
 
 .bg-\[\#233000\] {
@@ -1040,24 +1110,54 @@ video {
   background-color: rgb(235 240 228 / var(--tw-bg-opacity, 1));
 }
 
+.bg-\[\] {
+  background-color: ;
+}
+
+.bg-transparent {
+  background-color: transparent;
+}
+
+.bg-\[\#5E6600\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(94 102 0 / var(--tw-bg-opacity, 1));
+}
+
+.bg-yellow-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 240 138 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[url\(\/src\/bg1\.png\)\] {
+  background-image: url(/src/bg1.png);
+}
+
+.bg-cover {
+  background-size: cover;
+}
+
+.bg-no-repeat {
+  background-repeat: no-repeat;
+}
+
 .p-\[30px\] {
   padding: 30px;
 }
 
-.p-10 {
-  padding: 2.5rem;
+.p-5 {
+  padding: 1.25rem;
 }
 
-.p-1 {
-  padding: 0.25rem;
+.p-\[100px\] {
+  padding: 100px;
 }
 
-.p-14 {
-  padding: 3.5rem;
+.p-\[20px\] {
+  padding: 20px;
 }
 
-.p-12 {
-  padding: 3rem;
+.p-3 {
+  padding: 0.75rem;
 }
 
 .px-\[40px\] {
@@ -1080,51 +1180,76 @@ video {
   padding-bottom: 4rem;
 }
 
-.py-\[77px\] {
-  padding-top: 77px;
-  padding-bottom: 77px;
+.px-\[10px\] {
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
-.py-\[px\] {
-  padding-top: px;
-  padding-bottom: px;
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 
-.py-\[80px\] {
-  padding-top: 80px;
-  padding-bottom: 80px;
+.py-\[20px\] {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.px-\[30px\] {
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.px-\[50px\] {
+  padding-left: 50px;
+  padding-right: 50px;
+}
+
+.px-\[70px\] {
+  padding-left: 70px;
+  padding-right: 70px;
+}
+
+.py-\[12px\] {
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
+
+.py-7 {
+  padding-top: 1.75rem;
+  padding-bottom: 1.75rem;
 }
 
 .pb-16 {
   padding-bottom: 4rem;
 }
 
-.pt-16 {
-  padding-top: 4rem;
-}
-
-.pt-1 {
-  padding-top: 0.25rem;
-}
-
-.pt-\[\] {
-  padding-top: ;
-}
-
-.pt-\[77px\] {
-  padding-top: 77px;
-}
-
-.pl-12 {
-  padding-left: 3rem;
+.pl-0 {
+  padding-left: 0px;
 }
 
 .pt-12 {
   padding-top: 3rem;
 }
 
-.pl-0 {
-  padding-left: 0px;
+.pt-16 {
+  padding-top: 4rem;
+}
+
+.pt-\[77px\] {
+  padding-top: 77px;
+}
+
+.pb-\[40px\] {
+  padding-bottom: 40px;
+}
+
+.pt-7 {
+  padding-top: 1.75rem;
+}
+
+.pb-\[50px\] {
+  padding-bottom: 50px;
 }
 
 .text-center {
@@ -1139,21 +1264,28 @@ video {
   font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
 }
 
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
-.text-\[148px\] {
-  font-size: 148px;
+.text-\[18px\] {
+  font-size: 18px;
 }
 
 .text-\[24px\] {
   font-size: 24px;
 }
 
+.text-\[45px\] {
+  font-size: 45px;
+}
+
 .text-\[48px\] {
   font-size: 48px;
+}
+
+.text-\[50px\] {
+  font-size: 50px;
+}
+
+.text-\[55px\] {
+  font-size: 55px;
 }
 
 .text-\[68px\] {
@@ -1164,108 +1296,90 @@ video {
   font-size: 108px;
 }
 
+.text-\[16px\] {
+  font-size: 16px;
+}
+
+.text-\[100px\] {
+  font-size: 100px;
+}
+
 .text-\[40px\] {
   font-size: 40px;
 }
 
-.text-\[70px\] {
-  font-size: 70px;
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
-.text-\[60px\] {
-  font-size: 60px;
-}
-
-.text-\[55px\] {
-  font-size: 55px;
-}
-
-.text-\[50px\] {
-  font-size: 50px;
+.text-\[17px\] {
+  font-size: 17px;
 }
 
 .text-\[20px\] {
   font-size: 20px;
 }
 
-.text-\[18px\] {
-  font-size: 18px;
-}
-
-.text-\[53px\] {
-  font-size: 53px;
-}
-
-.text-\[51px\] {
-  font-size: 51px;
-}
-
-.text-\[47px\] {
-  font-size: 47px;
-}
-
-.text-\[45px\] {
-  font-size: 45px;
-}
-
-.leading-3 {
-  line-height: .75rem;
-}
-
-.leading-\[\] {
-  line-height: ;
-}
-
-.leading-\[5px\] {
-  line-height: 5px;
-}
-
-.leading-10 {
+.text-4xl {
+  font-size: 2.25rem;
   line-height: 2.5rem;
 }
 
-.leading-\[50px\] {
-  line-height: 50px;
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
-.leading-\[100px\] {
-  line-height: 100px;
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
-.leading-\[150px\] {
-  line-height: 150px;
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
 }
 
-.leading-6 {
-  line-height: 1.5rem;
-}
-
-.leading-4 {
-  line-height: 1rem;
-}
-
-.leading-5 {
-  line-height: 1.25rem;
-}
-
-.leading-\[60px\] {
-  line-height: 60px;
+.text-7xl {
+  font-size: 4.5rem;
+  line-height: 1;
 }
 
 .leading-\[80px\] {
   line-height: 80px;
 }
 
-.leading-8 {
-  line-height: 2rem;
+.leading-tight {
+  line-height: 1.25;
 }
 
-.leading-\[70px\] {
-  line-height: 70px;
+.leading-3 {
+  line-height: .75rem;
 }
 
-.leading-\[90px\] {
-  line-height: 90px;
+.leading-\[100px\] {
+  line-height: 100px;
+}
+
+.leading-\[180px\] {
+  line-height: 180px;
+}
+
+.leading-\[140px\] {
+  line-height: 140px;
+}
+
+.leading-\[130px\] {
+  line-height: 130px;
+}
+
+.leading-\[120px\] {
+  line-height: 120px;
+}
+
+.leading-\[110px\] {
+  line-height: 110px;
 }
 
 .text-white {
@@ -1273,21 +1387,36 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity, 1));
-}
-
 .text-\[\] {
   color: ;
 }
 
-.text-\[wh\] {
-  color: wh;
+.text-\[24\] {
+  color: 24;
 }
 
-.text-\[4\] {
-  color: 4;
+.text-\[\#5E6600\] {
+  --tw-text-opacity: 1;
+  color: rgb(94 102 0 / var(--tw-text-opacity, 1));
+}
+
+.text-gray-600 {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity, 1));
+}
+
+.text-\[4D4D4D\] {
+  color: 4D4D4D;
+}
+
+.text-\[\#4D4D4D\] {
+  --tw-text-opacity: 1;
+  color: rgb(77 77 77 / var(--tw-text-opacity, 1));
+}
+
+.text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity, 1));
 }
 
 @media (min-width: 640px) {
@@ -1299,14 +1428,9 @@ video {
     position: relative;
   }
 
-  .md\:my-\[5px\] {
-    margin-top: 5px;
-    margin-bottom: 5px;
-  }
-
-  .md\:my-auto {
-    margin-top: auto;
-    margin-bottom: auto;
+  .md\:mx-0 {
+    margin-left: 0px;
+    margin-right: 0px;
   }
 
   .md\:my-0 {
@@ -1314,21 +1438,40 @@ video {
     margin-bottom: 0px;
   }
 
-  .md\:mx-0 {
-    margin-left: 0px;
-    margin-right: 0px;
+  .md\:my-auto {
+    margin-top: auto;
+    margin-bottom: auto;
   }
 
-  .md\:mt-0 {
-    margin-top: 0px;
+  .md\:my-6 {
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+  }
+
+  .md\:my-7 {
+    margin-top: 1.75rem;
+    margin-bottom: 1.75rem;
+  }
+
+  .md\:my-\[5px\] {
+    margin-top: 5px;
+    margin-bottom: 5px;
   }
 
   .md\:mb-0 {
     margin-bottom: 0px;
   }
 
+  .md\:mt-0 {
+    margin-top: 0px;
+  }
+
   .md\:block {
     display: block;
+  }
+
+  .md\:inline {
+    display: inline;
   }
 
   .md\:flex {
@@ -1343,29 +1486,44 @@ video {
     height: 77vh;
   }
 
-  .md\:w-\[65\%\] {
-    width: 65%;
+  .md\:h-full {
+    height: 100%;
   }
 
-  .md\:w-\[70\%\] {
-    width: 70%;
+  .md\:h-\[110vh\] {
+    height: 110vh;
+  }
+
+  .md\:h-\[\] {
+    height: ;
+  }
+
+  .md\:h-\[60vh\] {
+    height: 60vh;
+  }
+
+  .md\:h-\[90vh\] {
+    height: 90vh;
+  }
+
+  .md\:h-\[120vh\] {
+    height: 120vh;
+  }
+
+  .md\:h-\[100vh\] {
+    height: 100vh;
   }
 
   .md\:w-\[1057px\] {
     width: 1057px;
   }
 
-  .md\:w-\[565px\] {
-    width: 565px;
+  .md\:w-\[44\%\] {
+    width: 44%;
   }
 
   .md\:w-\[45\%\] {
     width: 45%;
-  }
-
-  .md\:w-fit {
-    width: -moz-fit-content;
-    width: fit-content;
   }
 
   .md\:w-\[493px\] {
@@ -1380,21 +1538,161 @@ video {
     width: 522px;
   }
 
-  .md\:w-\[44\%\] {
-    width: 44%;
+  .md\:w-\[565px\] {
+    width: 565px;
+  }
+
+  .md\:w-\[70\%\] {
+    width: 70%;
+  }
+
+  .md\:w-fit {
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+
+  .md\:w-full {
+    width: 100%;
+  }
+
+  .md\:w-\[649px\] {
+    width: 649px;
+  }
+
+  .md\:w-\[508\] {
+    width: 508;
+  }
+
+  .md\:w-\[px\] {
+    width: px;
+  }
+
+  .md\:w-\[480px\] {
+    width: 480px;
+  }
+
+  .md\:w-\[\] {
+    width: ;
+  }
+
+  .md\:w-\[450px\] {
+    width: 450px;
+  }
+
+  .md\:w-\[40\%\] {
+    width: 40%;
+  }
+
+  .md\:w-\[5\] {
+    width: 5;
+  }
+
+  .md\:w-\[516px\] {
+    width: 516px;
+  }
+
+  .md\:w-\[344px\] {
+    width: 344px;
+  }
+
+  .md\:w-\[300px\] {
+    width: 300px;
+  }
+
+  .md\:w-\[750px\] {
+    width: 750px;
+  }
+
+  .md\:w-\[31\.33\] {
+    width: 31.33;
+  }
+
+  .md\:w-\[31\.33\%\] {
+    width: 31.33%;
+  }
+
+  .md\:w-\[31\%\] {
+    width: 31%;
+  }
+
+  .md\:w-\[400px\] {
+    width: 400px;
+  }
+
+  .md\:w-\[900px\] {
+    width: 900px;
+  }
+
+  .md\:w-\[120px\] {
+    width: 120px;
+  }
+
+  .md\:w-\[1200px\] {
+    width: 1200px;
+  }
+
+  .md\:w-\[1100px\] {
+    width: 1100px;
+  }
+
+  .md\:w-\[1180px\] {
+    width: 1180px;
+  }
+
+  .md\:w-\[1262\] {
+    width: 1262;
+  }
+
+  .md\:w-\[1262px\] {
+    width: 1262px;
+  }
+
+  .md\:w-\[65\%\] {
+    width: 65%;
+  }
+
+  .md\:w-\[\%\] {
+    width: %;
+  }
+
+  .md\:w-\[820px\] {
+    width: 820px;
+  }
+
+  .md\:w-\[880px\] {
+    width: 880px;
+  }
+
+  .md\:w-\[304px\] {
+    width: 304px;
+  }
+
+  .md\:justify-between {
+    justify-content: space-between;
+  }
+
+  .md\:gap-7 {
+    gap: 1.75rem;
   }
 
   .md\:pl-12 {
     padding-left: 3rem;
   }
 
+  .md\:pl-\[20px\] {
+    padding-left: 20px;
+  }
+
+  .md\:pr-\[100px\] {
+    padding-right: 100px;
+  }
+
   .md\:text-start {
     text-align: start;
   }
 
-  .md\:text-7xl {
-    font-size: 4.5rem;
-    line-height: 1;
+  .md\:text-\[108px\] {
+    font-size: 108px;
   }
 
   .md\:text-\[148px\] {
@@ -1405,12 +1703,21 @@ video {
     font-size: 24px;
   }
 
-  .md\:text-\[108px\] {
-    font-size: 108px;
-  }
-
   .md\:text-\[68px\] {
     font-size: 68px;
+  }
+
+  .md\:text-\[48px\] {
+    font-size: 48px;
+  }
+
+  .md\:text-\[32px\] {
+    font-size: 32px;
+  }
+
+  .md\:text-7xl {
+    font-size: 4.5rem;
+    line-height: 1;
   }
 
   .md\:leading-\[150px\] {
@@ -1419,5 +1726,17 @@ video {
 
   .md\:leading-\[80px\] {
     line-height: 80px;
+  }
+
+  .md\:leading-\[110px\] {
+    line-height: 110px;
+  }
+
+  .md\:text-\[\] {
+    color: ;
+  }
+
+  .md\:text-\[108\] {
+    color: 108;
   }
 }
